// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.add adds bonuses to settlement 1`] = `
Object {
  "activeSurvivorsList": Array [],
  "departing": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [
      "a description",
    ],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 3,
    "strength": 0,
    "survival": 3,
    "understanding": 0,
  },
  "name": "New Settlement",
  "newborn": Object {
    "accuracy": 1,
    "courage": 0,
    "description": Array [],
    "evasion": 1,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 1,
    "survival": 1,
    "understanding": 0,
  },
  "showdown": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [
      "another description",
    ],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "survivalLimit": 2,
  "survivors": Object {},
}
`;

exports[`.create creates a barebones settlement 1`] = `
Object {
  "activeSurvivorsList": Array [],
  "departing": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "name": "New Settlement",
  "newborn": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 1,
    "understanding": 0,
  },
  "showdown": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "survivalLimit": 1,
  "survivors": Object {},
}
`;

exports[`.create works with empty data 1`] = `
Object {
  "activeSurvivorsList": Array [],
  "departing": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "name": "New Settlement",
  "newborn": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "showdown": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "survivalLimit": 0,
  "survivors": Object {},
}
`;

exports[`.createSurvivor creates a survivor and assings it to the settlement 1`] = `
Object {
  "activeSurvivorsList": Array [
    "4e55b990-5b16-480f-81d2-06765c52ec72",
  ],
  "departing": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "name": "New Settlement",
  "newborn": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 1,
    "understanding": 0,
  },
  "showdown": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "survivalLimit": 1,
  "survivors": Object {
    "4e55b990-5b16-480f-81d2-06765c52ec72": Object {
      "abilities": Array [],
      "accuracy": 0,
      "cannotUseAbilities": false,
      "cannotUseFightingArts": false,
      "cannotUseSurvival": false,
      "courage": 0,
      "disorders": Array [],
      "dragonTraits": Object {
        "accuracy": false,
        "championsRite": false,
        "courage": false,
        "destined": false,
        "fatedBlow": false,
        "frozenStar": false,
        "iridescentHide": false,
        "noble": false,
        "oraclesEye": false,
        "pristine": false,
        "reincarnated": false,
        "scar": false,
        "strength": false,
        "unbreakable": false,
        "understanding": false,
        "weaponMaster": false,
      },
      "evasion": 0,
      "fightingArts": Array [],
      "gender": "male",
      "hunt xp": 0,
      "id": "4e55b990-5b16-480f-81d2-06765c52ec72",
      "insanity": 0,
      "luck": 0,
      "movement": 5,
      "name": "test name",
      "notes": "",
      "rerollUsed": false,
      "skipNextHunt": false,
      "speed": 0,
      "status": "alive",
      "strength": 0,
      "survival": 1,
      "understanding": 0,
      "weaponProficiency": undefined,
      "weaponProficiencyLevel": 0,
    },
  },
}
`;

exports[`.remove removes bonuses from settlement 1`] = `
Object {
  "activeSurvivorsList": Array [],
  "departing": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "name": "New Settlement",
  "newborn": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 1,
    "understanding": 0,
  },
  "showdown": Object {
    "accuracy": 0,
    "courage": 0,
    "description": Array [],
    "evasion": 0,
    "hunt xp": 0,
    "insanity": 0,
    "strength": 0,
    "survival": 0,
    "understanding": 0,
  },
  "survivalLimit": 1,
  "survivors": Object {},
}
`;
